--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -3,4 +3,4 @@
 <% end %>
 
 <h1>Create new expense</h1>
-<%= render 'expense_form' %>
+<%= render 'expense_form', submit_button: 'Create new expense' %>
