Delete expense support

--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,1 +1,4 @@
 <%= render 'expense_form', submit_button: 'Update expense' %>
+<%= form_for @expense, method: :delete do |f| %>
+  <%= f.submit 'Delete expense' %>
+<% end %>
